# human_resource_management

./: .env.example  pyproject.toml  requirements.txt
.ebextensions/: django.config
authentication/: forms.py  urls.py  views.py
authentication/templates/: login.html
core/: constants.py  custom_tags.py  template_utils.py
hrm/: admin.py  forms.py  models.py  urls.py  views.py
hrm/migrations/: 0001_initial.py
hrm/templates/: dashboard.html
hrm/templates/clients/: form.html  index.html  show.html
hrm/templates/employees/: form.html  index.html  show.html
human_resource_management/: settings.py  urls.py
static/custom/: custom-styles.css
templates/: common_index_page_script.html  common_messages.html  common_validation_error_template.html
templates/base/: app.html  auth_app.html  header.html  sidebar.html
